<resources>
    <!--    Home Screen-->
    <string name="book_title">E-Book</string>
    <string name="book_list">Books List</string>
    <string name="top_book">Top Books</string>
    <string name="title">Title: %1$s</string>
    <string name="author">Author: %1$s</string>
    <string name="publish_date">Published Date: %1$s</string>

    <!--    Detail Screen-->
    <string name="author_by_detail">Author By:</string>
    <string name="published_date_detail">Published Date:</string>
    <string name="description_detail">Description:</string>
    <string name="reviews_detail">Reviews:</string>
    <string name="title_detail">Title:</string>
    <string name="part_detail">Part:</string>
    <string name="place_detail">Place:</string>
    <string name="borrow_counter_detail">Borrow Counter:</string>
</resources>